tests/errors/range-arg-count.ari
fn main() -> i64 {
  for value in range(0) {
    return value;
  }
  return 0;
}
